[BE] - feat: fix production kuberente manifests

--- a/kafka/custom-values.yaml
+++ b/kafka/custom-values.yaml
@@ -28,14 +28,14 @@ cp-zookeeper:
     runAsUser: 0
 
   resources:
-  ## If you do want to specify resources, uncomment the following lines, adjust them as necessary,
-  ## and remove the curly braces after 'resources:'
+    ## If you do want to specify resources, uncomment the following lines, adjust them as necessary,
+    ## and remove the curly braces after 'resources:'
     limits:
-     cpu: 300m
-     memory: 512Mi
+      cpu: 300m
+      memory: 526Mi
     requests:
-     cpu: 100m
-     memory: 256Mi
+      cpu: 100m
+      memory: 128Mi
 
 ## ------------------------------------------------------
 ## Kafka
@@ -55,15 +55,15 @@ cp-kafka:
     # storageClass: ""
     size: 1Gi
     disksPerBroker: 1
-  resources: {}
-  ## If you do want to specify resources, uncomment the following lines, adjust them as necessary,
-  ## and remove the curly braces after 'resources:'
-#    limits:
-#     cpu: 300m
-#     memory: 512Mi
-#    requests:
-#     cpu: 100m
-#     memory: 256Mi
+  resources:
+    ## If you do want to specify resources, uncomment the following lines, adjust them as necessary,
+    ## and remove the curly braces after 'resources:'
+    limits:
+      cpu: 500m
+      memory: 600Mi
+    requests:
+      cpu: 100m
+      memory: 128Mi
   securityContext:
     runAsUser: 0
 
@@ -80,20 +80,20 @@ cp-schema-registry:
   #  - name: "regcred"
   heapOptions: "-Xms512M -Xmx512M"
   resources:
-  ## If you do want to specify resources, uncomment the following lines, adjust them as necessary,
-  ## and remove the curly braces after 'resources:'
+    ## If you do want to specify resources, uncomment the following lines, adjust them as necessary,
+    ## and remove the curly braces after 'resources:'
     limits:
-     cpu: 300m
-     memory: 512Mi
+      cpu: 300m
+      memory: 526Mi
     requests:
-     cpu: 100m
-     memory: 256Mi
+      cpu: 100m
+      memory: 128Mi
 
 ## ------------------------------------------------------
 ## REST Proxy
 ## ------------------------------------------------------
 cp-kafka-rest:
-  enabled: true
+  enabled: false
   image: confluentinc/cp-kafka-rest
   imageTag: 6.1.0
   ## Optionally specify an array of imagePullSecrets. Secrets must be manually created in the namespace.
@@ -115,7 +115,7 @@ cp-kafka-rest:
 ## Kafka Connect
 ## ------------------------------------------------------
 cp-kafka-connect:
-  enabled: true
+  enabled: false
   image: confluentinc/cp-kafka-connect
   imageTag: 6.1.0
   ## Optionally specify an array of imagePullSecrets. Secrets must be manually created in the namespace.
@@ -137,7 +137,7 @@ cp-kafka-connect:
 ## KSQL Server
 ## ------------------------------------------------------
 cp-ksql-server:
-  enabled: true
+  enabled: false
   image: confluentinc/cp-ksqldb-server
   imageTag: 6.1.0
   ## Optionally specify an array of imagePullSecrets. Secrets must be manually created in the namespace.
@@ -152,7 +152,7 @@ cp-ksql-server:
 ## Control Center
 ## ------------------------------------------------------
 cp-control-center:
-  enabled: true
+  enabled: false
   image: confluentinc/cp-enterprise-control-center
   imageTag: 6.1.0
   ## Optionally specify an array of imagePullSecrets. Secrets must be manually created in the namespace.
