--- a/local/code-assessment-deployment-local.yml
+++ b/local/code-assessment-deployment-local.yml
@@ -4,15 +4,15 @@ kind: Deployment
 metadata:
   name: code-assessment-deployment
   labels:
-    app: code-assessment-deployment
+    app: code-assessment-service
 spec:
   selector:
     matchLabels:
-      app: code-assessment-deployment
+      app: code-assessment-service
   template:
     metadata:
       labels:
-        app: code-assessment-deployment
+        app: code-assessment-service
     spec:
       containers:
         - name: code-assessment-service
@@ -20,6 +20,8 @@ spec:
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: "prod"
+            - name: JAVA_TOOL_OPTIONS
+              value: "-Xmx256m -Xms128m"
             - name: LOGGING_LEVEL_COM_BACKEND_PROGRAMMING_LEARNING_SYSTEM
               value: "info"
             - name: LOGGING_LEVEL_ROOT
@@ -32,20 +34,12 @@ spec:
               value: "localdb"
             - name: KAFKA-CONFIG_BOOTSTRAP-SERVERS
               value: "local-confluent-kafka-cp-kafka-headless:9092"
-            - name: SPRING_ZIPKIN_BASE_URL
-              value: "http://zipkin:9411"
-            - name: SPRING_ZIPKIN_SENDER_TYPE
-              value: "kafka"
-            - name: SPRING_KAFKA_BOOTSTRAP-SERVERS
-              value: "local-confluent-kafka-cp-kafka-headless:9092"
-            - name: SPRING_SLEUTH_SAMPLER_PROBABILITY
-              value: "1.0"
             - name: KAFKA-CONFIG_SCHEMA-REGISTRY-URL
               value: "http://local-confluent-kafka-cp-schema-registry:8081"
             - name: CONFIG_SERVER
               value: "http://config-server:9999"
             - name: EUREKA_SERVER
-              value: "http://discovery-service-1:8761/eureka"
+              value: "http://discovery-service:8761/eureka"
           resources:
             limits:
               cpu: "500m"
@@ -53,13 +47,6 @@ spec:
             requests:
               cpu: "200m"
               memory: "256Mi"
-          volumeMounts:
-            - name: code-assessment-service-log
-              mountPath: /logs
-      volumes:
-        - name: code-assessment-service-log
-          persistentVolumeClaim:
-            claimName: code-assessment-service-pvc
 ---
 apiVersion: v1
 kind: Service
@@ -70,24 +57,10 @@ metadata:
     app: code-assessment-service
 spec:
   selector:
-    app: code-assessment-deployment
+    app: code-assessment-service
   ports:
     - name: code-assessment-service-port
       protocol: TCP
       port: 8183
   type: LoadBalancer
   loadBalancerIP: ""
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: code-assessment-service-pvc
-  namespace: default
-  labels:
-    app: code-assessment-service-pvc
-spec:
-  accessModes:
-    - ReadWriteMany
-  resources:
-    requests:
-      storage: 100Mi
