--- a/local/course-deployment-local.yml
+++ b/local/course-deployment-local.yml
@@ -5,15 +5,15 @@ metadata:
   name: course-deployment
   namespace: default
   labels:
-    app: course-deployment
+    app: course-service
 spec:
   selector:
     matchLabels:
-      app: course-deployment
+      app: course-service
   template:
     metadata:
       labels:
-        app: course-deployment
+        app: course-service
     spec:
       containers:
         - name: course-service
@@ -21,6 +21,8 @@ spec:
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: "prod"
+            - name: JAVA_TOOL_OPTIONS
+              value: "-Xmx256m -Xms128m"
             - name: LOGGING_LEVEL_COM_BACKEND_PROGRAMMING_LEARNING_SYSTEM
               value: "info"
             - name: LOGGING_LEVEL_ROOT
@@ -33,23 +35,12 @@ spec:
               value: "localdb"
             - name: KAFKA-CONFIG_BOOTSTRAP-SERVERS
               value: "local-confluent-kafka-cp-kafka-headless:9092"
-            - name: SPRING_ZIPKIN_BASE_URL
-              value: "http://zipkin:9411"
-            - name: SPRING_ZIPKIN_SENDER_TYPE
-              value: "kafka"
-            - name: SPRING_KAFKA_BOOTSTRAP-SERVERS
-              value: "local-confluent-kafka-cp-kafka-headless:9092"
-            - name: SPRING_SLEUTH_SAMPLER_PROBABILITY
-              value: "1.0"
             - name: KAFKA-CONFIG_SCHEMA-REGISTRY-URL
               value: "http://local-confluent-kafka-cp-schema-registry:8081"
             - name: CONFIG_SERVER
               value: "http://config-server:9999"
             - name: EUREKA_SERVER
-              value: "http://discovery-service-1:8761/eureka"
-          volumeMounts:
-            - name: course-service-log
-              mountPath: /logs
+              value: "http://discovery-service:8761/eureka"
           resources:
             limits:
               cpu: "500m"
@@ -57,10 +48,6 @@ spec:
             requests:
               cpu: "200m"
               memory: "256Mi"
-      volumes:
-        - name: course-service-log
-          persistentVolumeClaim:
-            claimName: course-service-pvc
 ---
 apiVersion: v1
 kind: Service
@@ -71,7 +58,7 @@ metadata:
     app: course-service
 spec:
   selector:
-    app: course-deployment
+    app: course-service
   ports:
     - name: course-service-port
       protocol: TCP
@@ -81,17 +68,3 @@ spec:
       port: 8085
   type: LoadBalancer
   loadBalancerIP: ""
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: course-service-pvc
-  namespace: default
-  labels:
-    app: course-service-pvc
-spec:
-  accessModes:
-    - ReadWriteMany
-  resources:
-    requests:
-      storage: 100Mi
